[feat] chat module impl
